scss/_global.scss
body {
  @include body-font;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  @include heading-font;
}

.btn-xl {
  text-transform: uppercase;
  padding: 1.5rem 3rem;
  font-size: 0.9rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
}

.bg-black {
  background-color: $black !important;
}

.rounded-pill {
  border-radius: 5rem;
}

.paragraph {
  font-size: 2rem;
  text-align: center;
}

.footer {
  font-size: 1rem;
}

.primary-text {
  color: $primary;
}

.secondary-text {
  color: $secondary;
}

.background-black {
  background-color: $black;
}

.scroll-offset {
  display: block;
  height: 4.1rem; /*This is just a hack until I can get the real value of the header*/
  margin-top: -4.1rem;
  visibility: hidden;
}

.links-dark {
  color: $gray-900;
  text-decoration: none;
}

.links-white {
  color: $white;
  text-decoration: none;
}

a:hover {
  color: $secondary;
  text-decoration: underline;
}

.section-padding {
  padding-top: 3rem;
  padding-left: 6rem;
  padding-right: 6rem;
  padding-bottom: 3rem;
}

@media (max-width: 992px) {
  .paragraph {
    font-size: 1.5rem;
  }

  .footer {
    font-size: .8rem;
  }
}

/*The navbar toggle appears at this breakpoint */
@media (max-width: 768px) {
  .paragraph {
    font-size: 1.1rem;
  }

  .footer {
    font-size: .6rem;
  }

  .section-padding {
    padding-left: 3rem;
    padding-right: 3rem;
  }
}

@media (max-width: 426px) {
  .section-padding {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

